--- a/style/md.css
+++ b/style/md.css
@@ -179,7 +179,7 @@
     }
 
     .primary-screen-start-block {
-        padding-top: 150px;
+        padding-top: 115px;
     }
 
     .primary-screen-start-block .pre-text {
@@ -1392,11 +1392,27 @@
     #about-screen {
         position: relative;
         z-index: 8;
-        height: 300px;
+        height: auto;
         margin-top: 170px;
     }
 
     #about-screen::before {
+        content: '';
+        position: absolute;
+        width: 500px;
+        height: 1556px;
+        left: 192px;
+        top: 0;
+        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.2632) 49.72%, rgba(201, 76, 244, 0.28) 75.27%);
+        filter: blur(262px);
+        z-index: -1;
+    }
+
+    .in-about-screen {
+        margin: 0 auto;
+    }
+
+    /* #about-screen::before {
         content: '';
         position: absolute;
         width: 3px;
@@ -1407,11 +1423,12 @@
         filter: blur(122px);
         transform: matrix(0, 1, 1, 0, 0, 0);
         z-index: -1;
-    }
+    } */
 
     .card-about {
-        width: 220px;
+        width: 345px;
         margin: inherit;
+        margin-bottom: 40px;
     }
 
     .in-card-about {
@@ -1435,6 +1452,7 @@
 
     #subscribe {
         height: 700px;
+        margin-top: 90px;
     }
 
     .in-subscribe {
@@ -1569,6 +1587,7 @@
     #work {
         position: relative;
         padding: 0px 0 70px;
+        margin-top: 50px;
     }
 
 
@@ -1594,8 +1613,9 @@
 
     .work-box {
         padding: 0px 0 0px;
-        height: 420px;
+        height: auto;
         position: relative;
+        margin-bottom: 50px;
     }
 
     .work-box .work-box-start {
@@ -1643,11 +1663,11 @@
         border-radius: 34px;
         z-index: -1;
     }
-    
+
     .work-image {
         overflow: hidden;
     }
-    
+
     .work-box-image img {
         position: relative;
         z-index: 3;
@@ -1767,7 +1787,7 @@
     .work-box .work-third {
         padding-top: 5px;
         position: relative;
-        height: 360px;
+        height: auto;
         margin-top: 5px;
     }
 
@@ -1836,7 +1856,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 12px;
+        font-size: 10px;
         line-height: 16px;
         max-width: 230px;
         color: #D1D1D1;
@@ -1879,6 +1899,7 @@
         height: auto;
         position: relative;
     }
+
     .card-section-box {
         margin-bottom: 20px;
     }
@@ -1886,8 +1907,8 @@
     .card-section::before {
         content: '';
         position: absolute;
-        width: 350px;
-        height: 1575px;
+        width: 1575px;
+        height: 350px;
         left: 0px;
         top: 0px;
         background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.2632) 49.72%, rgba(201, 76, 244, 0.28) 75.27%);
@@ -1990,7 +2011,7 @@
         letter-spacing: 0.18em;
         text-transform: uppercase;
         /* background: linear-gradient(78.84deg, rgba(72, 123, 255, 0.357) 0%, rgba(65, 65, 65, 0.147) 98.69%), #FFFFFF; */
-       
+
     }
 
     .card-invite span.lines-level {
