fixed css products page

--- a/style/lg.css
+++ b/style/lg.css
@@ -44,11 +44,11 @@
 
 
     .primary-screen {
-        height: 550px;
+        height: 610px;
         position: relative;
         z-index: 1;
         padding-top: 108px;
-        margin-bottom: 80px;
+        margin-bottom: 0px;
     }
 
     .primary-screen::before {
@@ -69,7 +69,7 @@
         width: 1440px;
         height: 692px;
         left: calc(50% - 1440px/2);
-        top: 100px;
+        top: 0;
         background: url('../images/illustration_bg.svg');
         z-index: -1;
     }
@@ -79,7 +79,7 @@
     }
 
     .max-bottom {
-        margin-bottom: 140px;
+        margin-bottom: 180px;
     }
 
     .primary-screen-end-block {
@@ -140,10 +140,10 @@
         left: 50%;
         margin-left: -200px;
         top: 0px;
-        background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(5.30272px);
-        border-radius: 16.7454px;
-        z-index: -1;
+        border-radius: 30px;
+        background: linear-gradient(45deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.21) 100%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(9.5px);
+        z-index: 1;
     }
 
     .primary-screen-end-block .gradient-circle {
@@ -181,7 +181,7 @@
     }
 
     .primary-screen-start-block {
-        padding-top: 105px;
+        padding-top: 145px;
     }
 
     .primary-screen-start-block .pre-text {
@@ -196,7 +196,6 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
-        text-align: center;
         margin-bottom: 10px;
     }
 
@@ -236,6 +235,7 @@
         text-shadow: 0px 4px 32px rgba(0, 0, 0, 0.25);
         margin-bottom: 30px;
         max-width: 350px;
+        font-size: 22px;
     }
 
     .primary-screen-start-block button {
@@ -244,21 +244,21 @@
     }
 
     .primary-screen-end-block img.product-server {
-        width: 400px;
-        height: 400px;
+        width: 450px;
+        height: 420px;
         left: 50%;
-        margin-left: -200px;
-        top: -1px;
+        margin-left: -250px;
+        top: -35px;
         position: absolute;
         z-index: 5;
     }
 
     .gradient-ellipse-left {
         position: absolute;
-        width: 86.52px;
-        height: 124.47px;
-        left: 130.32px;
-        top: 122.03px;
+        width: 90px;
+        height: 125px;
+        left: 0px;
+        top: 123px;
         background: #00B2FF;
         mix-blend-mode: screen;
         filter: blur(34.6072px);
@@ -283,18 +283,19 @@
 
     .gradient-ellipse-circle {
         position: absolute;
-        width: 310px;
-        height: 310px;
+        width: 400px;
+        height: 400px;
         left: 50%;
         top: 10px;
-        margin-left: -155px;
-        background: rgba(76, 144, 244, 0.9);
-        filter: blur(56.9345px);
+        margin-left: -200px;
+        border-radius: 550.77px;
+        background: rgba(76, 144, 244, 0.90);
+        filter: blur(102px);
     }
 
     .product-section {
         position: relative;
-        height: 860px;
+        height: auto;
         padding-top: 50px;
         padding-bottom: 40px;
         z-index: 8;
@@ -310,9 +311,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
-        font-size: 36px;
         line-height: 120%;
-        text-align: center;
         background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.3) -32.37%, rgba(37, 203, 255, 0.3) 93.03%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -325,9 +324,8 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 22px;
         line-height: 150%;
-        text-align: center;
         background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -338,13 +336,13 @@
     .in-section-ai::before {
         content: '';
         position: absolute;
-        width: 375px;
-        height: 600px;
+        width: 1800px;
+        height: 400px;
         left: 0px;
-        top: 12p5x;
-        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.59) 28.76%, rgba(201, 76, 244, 0.59) 61.12%);
-        filter: blur(200px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 125px;
+        border-radius: 1800px;
+        background: linear-gradient(159deg, rgba(37, 203, 255, 0.30) 0%, rgba(201, 76, 244, 0.30) 100%);
+        filter: blur(247px);
         z-index: 1;
     }
 
@@ -379,13 +377,12 @@
 
     .in-section-game::before {
         content: '';
-        width: 375px;
-        height: 509px;
-        left: 0px;
-        top: 127px;
+        width: 900px;
+        height: 450px;
+        left: 100px;
+        top: 200px;
         background: linear-gradient(85.81deg, rgba(37, 203, 255, 0.5) 39.44%, rgba(76, 184, 244, 0.5) 89.61%);
         filter: blur(187px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
         z-index: 1;
     }
 
@@ -400,7 +397,7 @@
         filter: blur(5px);
         transform: rotate(330deg);
         background: url('../images/game-bg-sm.svg') no-repeat;
-        z-index: 21;
+        z-index: 1;
     }
 
     .game-bg-md {
@@ -419,14 +416,14 @@
 
     .in-section-education::before {
         content: '';
-        width: 375px;
+        width: 1200px;
         height: 600px;
         left: 0px;
-        top: 127px;
-        background: linear-gradient(85.81deg, rgba(255, 37, 246, 0.7) 39.44%, rgba(76, 123, 244, 0.7) 89.61%, rgba(244, 76, 197, 0.7) 89.61%);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 125px;
+        border-radius: 1200px;
+        background: linear-gradient(153deg, rgba(220, 101, 137, 0.30) 0%, rgba(201, 76, 244, 0.30) 100%);
+        filter: blur(300px);
         z-index: 1;
-        border-radius: 50%;
     }
 
     .resource-conus {
@@ -443,13 +440,13 @@
 
     .in-section-trading::before {
         content: '';
-        width: 375px;
-        height: 620px;
+        width: 1440px;
+        height: 915px;
         left: 0px;
-        top: 180px;
-        background: linear-gradient(85.81deg, rgba(37, 203, 255, 0.8) 39.44%, rgba(76, 123, 244, 0.8) 89.61%);
-        filter: blur(217px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 150px;
+        border-radius: 1440px;
+        background: linear-gradient(147deg, rgba(37, 203, 255, 0.30) 0%, rgba(76, 123, 244, 0.30) 100%);
+        filter: blur(300px);
         z-index: 1;
     }
 
@@ -479,7 +476,7 @@
     }
 
     .card {
-        height: 350px;
+        height: 365px;
         position: relative;
         background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
         backdrop-filter: blur(4.025px);
@@ -491,7 +488,7 @@
     .card-image {
         position: relative;
         width: 100%;
-        height: 190px;
+        height: 170px;
         overflow: hidden;
     }
 
@@ -502,7 +499,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 190px;
+        height: 170px;
         border-radius: 11.5px 11.5px 0px 0px;
         transition: all 0.5s;
         z-index: 3;
@@ -513,14 +510,14 @@
     }
 
     .card-body {
-        padding: 15px;
+        padding: 20px 15px 15px;
     }
 
     .card-title {
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 600;
-        font-size: 16px;
+        font-size: 20px;
         line-height: 140%;
         color: #FFFFFF;
 
@@ -530,7 +527,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 300;
-        font-size: 12px;
+        font-size: 13px;
         line-height: 160%;
         color: #CBCBCB;
     }
@@ -553,9 +550,8 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
-        font-size: 28px;
+        font-size: 36px;
         line-height: 120%;
-        text-align: center;
         background: linear-gradient(90deg, rgba(50, 194, 255, 0.4) 0%, rgba(142, 122, 249, 0.4) 55.6%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -563,30 +559,29 @@
     }
 
     .product-contact-start .text {
-        max-width: 450px;
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 14px;
+        font-size: 18px;
         line-height: 150%;
-        text-align: center;
         background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-shadow: 0px 2.49702px 19.9761px rgba(0, 0, 0, 0.25);
-        margin: 0 auto 80px;
+        margin-bottom: 35px;
+
     }
 
     .chart-lg {
         position: absolute;
-        width: 500px;
-        height: 500px;
+        width: 600px;
+        height: 600px;
         left: initial;
         margin-left: 0px;
-        top: -20px;
+        top: -70px;
         right: 0px;
-        margin-right: -80px;
+        margin-right: -125px;
         transform: rotate(0deg);
         opacity: 1;
         background: url('../images/chart-xs.svg') no-repeat center center;
@@ -604,32 +599,29 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
-        font-size: 152.943px;
-        line-height: 125px;
+        font-size: 170px;
+        line-height: 170px;
         background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.2) -32.37%, rgba(37, 203, 255, 0.2) 93.03%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
         mix-blend-mode: normal;
         text-shadow: 0px 5.09811px 40.7849px rgba(0, 0, 0, 0.25);
-        margin: 50px 0 10px;
+        margin: 20px 0 10px;
     }
 
     .product-contact-end .description {
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 15px;
+        font-size: 22px;
         line-height: 32px;
         color: #8A8A8E;
     }
 
     .product-contact-start .btn-order {
-        position: absolute;
-        bottom: 100px;
-        left: 50%;
+        position: static;
         margin: 0 auto;
-        margin-left: -245px;
     }
 
 
@@ -1819,7 +1811,7 @@
     .card-img-bottom,
     .card-img-top {
         width: 100%;
-        height: 190px;
+        height: 170px;
         position: relative;
         top: 0px;
     }
