--- a/style/md.css
+++ b/style/md.css
@@ -44,7 +44,7 @@
 
 
     .primary-screen {
-        height: 550px;
+        height: auto;
         position: relative;
         z-index: 1;
         padding-top: 108px;
@@ -69,7 +69,7 @@
         width: 1440px;
         height: 692px;
         left: calc(50% - 1440px/2);
-        top: 100px;
+        top: 0;
         background: url('../images/illustration_bg.svg');
         z-index: -1;
     }
@@ -86,6 +86,7 @@
         position: relative;
         z-index: 7;
         margin-top: 90px;
+        min-height: 310px;
     }
 
     .home-screen-end-block img {
@@ -179,14 +180,14 @@
     }
 
     .primary-screen-start-block {
-        padding-top: 115px;
+        padding-top: 40px;
     }
 
     .primary-screen-start-block .pre-text {
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 500;
-        font-size: 14px;
+        font-size: 18px;
         line-height: 100%;
         letter-spacing: 0.15em;
         text-transform: uppercase;
@@ -208,7 +209,9 @@
         color: #FFFFFF;
         mix-blend-mode: normal;
         text-shadow: 0px 2.99358px 23.9487px rgba(0, 0, 0, 0.25);
-        margin-bottom: 15px;
+        margin-bottom: 5px;
+        text-align: center;
+        font-size: 76px;
     }
 
     .primary-screen-start-block .title>strong {
@@ -224,38 +227,38 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 20px;
         line-height: 150%;
-        text-align: left;
+        text-align: center;
         background: linear-gradient(93.41deg, #FFFFFF 44.08%, rgba(44, 198, 255, 0) 155.18%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-shadow: 0px 4px 32px rgba(0, 0, 0, 0.25);
-        margin-bottom: 30px;
+        margin: 0 auto 30px;
     }
 
     .primary-screen-start-block button {
-        margin: 5px 0 0 0;
+        margin: 0 auto;
         display: block;
     }
 
     .primary-screen-end-block img.product-server {
-        width: 400px;
-        height: 400px;
+        width: 460px;
+        height: 460px;
         left: 50%;
-        margin-left: -200px;
-        top: -1px;
+        margin-left: -260px;
+        top: -57px;
         position: absolute;
         z-index: 5;
     }
 
     .gradient-ellipse-left {
         position: absolute;
-        width: 86.52px;
-        height: 124.47px;
-        left: 130.32px;
-        top: 122.03px;
+        width: 115px;
+        height: 170px;
+        left: 126px;
+        top: 108px;
         background: #00B2FF;
         mix-blend-mode: screen;
         filter: blur(34.6072px);
@@ -264,10 +267,10 @@
 
     .gradient-ellipse-right {
         position: absolute;
-        width: 86.52px;
-        height: 174.71px;
-        left: 315.22px;
-        top: 86.05px;
+        width: 90px;
+        height: 175px;
+        left: 425px;
+        top: 100px;
         background: rgba(0, 178, 255, 0.6);
         mix-blend-mode: screen;
         filter: blur(34.6072px);
@@ -280,18 +283,18 @@
 
     .gradient-ellipse-circle {
         position: absolute;
-        width: 310px;
-        height: 310px;
+        width: 400px;
+        height: 400px;
         left: 50%;
         top: 10px;
-        margin-left: -155px;
+        margin-left: -200px;
         background: rgba(76, 144, 244, 0.9);
         filter: blur(56.9345px);
     }
 
     .product-section {
         position: relative;
-        height: 860px;
+        height: auto;
         padding-top: 50px;
         padding-bottom: 40px;
         z-index: 8;
@@ -307,7 +310,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
-        font-size: 36px;
+        font-size: 50px;
         line-height: 120%;
         text-align: center;
         background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.3) -32.37%, rgba(37, 203, 255, 0.3) 93.03%), #FFFFFF;
@@ -317,12 +320,12 @@
     }
 
     .product-section .text-section {
-        max-width: 430px;
-        margin: 0 auto 30px;
+        max-width: 600px;
+        margin: 0 auto 60px;
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 22px;
         line-height: 150%;
         text-align: center;
         background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
@@ -335,13 +338,13 @@
     .in-section-ai::before {
         content: '';
         position: absolute;
-        width: 375px;
-        height: 600px;
+        width: 1000px;
+        height: 1000px;
         left: 0px;
-        top: 12p5x;
-        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.59) 28.76%, rgba(201, 76, 244, 0.59) 61.12%);
-        filter: blur(200px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 125px;
+        border-radius: 1000px;
+        background: linear-gradient(159deg, rgba(37, 203, 255, 0.30) 0%, rgba(201, 76, 244, 0.30) 100%);
+        filter: blur(247px);
         z-index: 1;
     }
 
@@ -376,13 +379,12 @@
 
     .in-section-game::before {
         content: '';
-        width: 375px;
-        height: 509px;
-        left: 0px;
-        top: 127px;
+        width: 1000px;
+        height: 1000px;
+        left: 0;
+        top: 100px;
         background: linear-gradient(85.81deg, rgba(37, 203, 255, 0.5) 39.44%, rgba(76, 184, 244, 0.5) 89.61%);
         filter: blur(187px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
         z-index: 1;
     }
 
@@ -416,14 +418,14 @@
 
     .in-section-education::before {
         content: '';
-        width: 375px;
-        height: 600px;
+        width: 1000px;
+        height: 1000px;
         left: 0px;
-        top: 127px;
-        background: linear-gradient(85.81deg, rgba(255, 37, 246, 0.7) 39.44%, rgba(76, 123, 244, 0.7) 89.61%, rgba(244, 76, 197, 0.7) 89.61%);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 100px;
+        border-radius: 1000px;
+        background: linear-gradient(153deg, rgba(220, 101, 137, 0.30) 0%, rgba(201, 76, 244, 0.30) 100%);
+        filter: blur(300px);
         z-index: 1;
-        border-radius: 50%;
     }
 
     .resource-conus {
@@ -440,13 +442,13 @@
 
     .in-section-trading::before {
         content: '';
-        width: 375px;
-        height: 620px;
+        width: 1000px;
+        height: 1000px;
         left: 0px;
-        top: 180px;
-        background: linear-gradient(85.81deg, rgba(37, 203, 255, 0.8) 39.44%, rgba(76, 123, 244, 0.8) 89.61%);
-        filter: blur(217px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 100px;
+        border-radius: 1000px;
+        background: linear-gradient(147deg, rgba(37, 203, 255, 0.30) 0%, rgba(76, 123, 244, 0.30) 100%);
+        filter: blur(300px);
         z-index: 1;
     }
 
@@ -476,7 +478,7 @@
     }
 
     .card {
-        height: 350px;
+        height: 430px;
         position: relative;
         background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
         backdrop-filter: blur(4.025px);
@@ -488,7 +490,7 @@
     .card-image {
         position: relative;
         width: 100%;
-        height: 190px;
+        height: 210px;
         overflow: hidden;
     }
 
@@ -499,7 +501,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 190px;
+        height: 210px;
         border-radius: 11.5px 11.5px 0px 0px;
         transition: all 0.5s;
         z-index: 3;
@@ -510,14 +512,14 @@
     }
 
     .card-body {
-        padding: 15px;
+        padding: 25px 20px 5px;
     }
 
     .card-title {
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 600;
-        font-size: 16px;
+        font-size: 22px;
         line-height: 140%;
         color: #FFFFFF;
 
@@ -527,7 +529,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 300;
-        font-size: 12px;
+        font-size: 16px;
         line-height: 160%;
         color: #CBCBCB;
     }
@@ -539,7 +541,7 @@
 
     .product-contact {
         position: relative;
-        height: 440px;
+        height: auto;
         padding-top: 55px;
         padding-bottom: 55px;
         z-index: 8;
@@ -550,9 +552,11 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
-        font-size: 28px;
+        font-size: 36px;
         line-height: 120%;
         text-align: center;
+        max-width: 480px;
+        margin: 0 auto 20px;
         background: linear-gradient(90deg, rgba(50, 194, 255, 0.4) 0%, rgba(142, 122, 249, 0.4) 55.6%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -560,11 +564,11 @@
     }
 
     .product-contact-start .text {
-        max-width: 450px;
+        max-width: 600px;
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 14px;
+        font-size: 18px;
         line-height: 150%;
         text-align: center;
         background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
@@ -572,18 +576,18 @@
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-shadow: 0px 2.49702px 19.9761px rgba(0, 0, 0, 0.25);
-        margin: 0 auto 80px;
+        margin: 0 auto;
     }
 
     .chart-lg {
         position: absolute;
-        width: 500px;
-        height: 500px;
+        width: 650px;
+        height: 650px;
         left: initial;
         margin-left: 0px;
         top: -20px;
         right: 0px;
-        margin-right: -80px;
+        margin-right: 0px;
         transform: rotate(0deg);
         opacity: 1;
         background: url('../images/chart-xs.svg') no-repeat center center;
@@ -595,6 +599,7 @@
         position: static;
         top: 40%;
         z-index: 8;
+        padding-bottom: 100px;
     }
 
     .product-contact-end .percent {
@@ -616,17 +621,17 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 15px;
-        line-height: 32px;
+        font-size: 18px;
+        line-height: 18px;
         color: #8A8A8E;
     }
 
     .product-contact-start .btn-order {
         position: absolute;
-        bottom: 100px;
+        bottom: 60px;
         left: 50%;
         margin: 0 auto;
-        margin-left: -245px;
+        margin-left: -62px;
     }
 
 
@@ -1820,7 +1825,7 @@
     .card-img-bottom,
     .card-img-top {
         width: 100%;
-        height: 190px;
+        height: 210px;
         position: relative;
         top: 0px;
     }
