--- a/style/sm.css
+++ b/style/sm.css
@@ -29,7 +29,7 @@
     }
 
     a.logotype {
-        padding-left: 25px;
+        padding-left: 10px;
     }
 
     a.logotype img {
@@ -39,7 +39,7 @@
 
 
     .primary-screen {
-        height: 714px;
+        height: auto;
         position: relative;
         z-index: 1;
         padding-top: 108px;
@@ -64,7 +64,7 @@
         width: 1440px;
         height: 692px;
         left: calc(50% - 1440px/2);
-        top: 150px;
+        top: 0;
         background: url('../images/illustration_bg.svg');
         z-index: -1;
     }
@@ -80,7 +80,8 @@
     .primary-screen-end-block {
         position: relative;
         z-index: 7;
-        margin-top: 90px;
+        margin-top: 130px;
+        min-height: 320px;
     }
 
     .home-screen-end-block img {
@@ -208,7 +209,7 @@
         color: #FFFFFF;
         mix-blend-mode: normal;
         text-shadow: 0px 2.99358px 23.9487px rgba(0, 0, 0, 0.25);
-        margin-bottom: 15px;
+        margin-bottom: 5px;
     }
 
     .primary-screen-start-block .title>strong {
@@ -232,8 +233,8 @@
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-shadow: 0px 4px 32px rgba(0, 0, 0, 0.25);
-        max-width: 400px;
-        margin: 0 auto 30px;
+        max-width: 500px;
+        margin: 0 auto 40px;
     }
 
     .primary-screen-start-block button {
@@ -242,21 +243,21 @@
     }
 
     .primary-screen-end-block img.product-server {
-        width: 400px;
-        height: 400px;
+        width: 460px;
+        height: 460px;
         left: 50%;
-        margin-left: -200px;
-        top: -1px;
+        margin-left: -260px;
+        top: -57px;
         position: absolute;
         z-index: 5;
     }
 
     .gradient-ellipse-left {
         position: absolute;
-        width: 86.52px;
-        height: 124.47px;
-        left: 130.32px;
-        top: 122.03px;
+        width: 115px;
+        height: 170px;
+        left: 50px;
+        top: 105px;
         background: #00B2FF;
         mix-blend-mode: screen;
         filter: blur(34.6072px);
@@ -265,10 +266,10 @@
 
     .gradient-ellipse-right {
         position: absolute;
-        width: 86.52px;
-        height: 174.71px;
-        left: 315.22px;
-        top: 86.05px;
+        width: 125px;
+        height: 175px;
+        left: 350px;
+        top: 100px;
         background: rgba(0, 178, 255, 0.6);
         mix-blend-mode: screen;
         filter: blur(34.6072px);
@@ -281,20 +282,20 @@
 
     .gradient-ellipse-circle {
         position: absolute;
-        width: 310px;
-        height: 310px;
+        width: 400px;
+        height: 400px;
         left: 50%;
-        top: 10px;
-        margin-left: -155px;
+        top: 0px;
+        margin-left: -200px;
         background: rgba(76, 144, 244, 0.9);
         filter: blur(56.9345px);
     }
 
     .product-section {
         position: relative;
-        height: 800px;
+        height: auto;
         padding-top: 50px;
-        padding-bottom: 40px;
+        padding-bottom: 0px;
         z-index: 8;
         margin-top: 70px;
     }
@@ -308,7 +309,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
-        font-size: 36px;
+        font-size: 50px;
         line-height: 120%;
         text-align: center;
         background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.3) -32.37%, rgba(37, 203, 255, 0.3) 93.03%), #FFFFFF;
@@ -318,12 +319,12 @@
     }
 
     .product-section .text-section {
-        max-width: 430px;
-        margin: 0 auto 30px;
+        max-width: 500px;
+        margin: 0 auto 45px;
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 18px;
         line-height: 150%;
         text-align: center;
         background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
@@ -336,13 +337,13 @@
     .in-section-ai::before {
         content: '';
         position: absolute;
-        width: 375px;
-        height: 600px;
+        width: 500px;
+        height: 700px;
         left: 0px;
-        top: 12p5x;
-        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.59) 28.76%, rgba(201, 76, 244, 0.59) 61.12%);
-        filter: blur(200px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 50px;
+        border-radius: 500px;
+        background: linear-gradient(159deg, rgba(37, 203, 255, 0.30) 0%, rgba(201, 76, 244, 0.30) 100%);
+        filter: blur(247px);
         z-index: 1;
     }
 
@@ -377,13 +378,12 @@
 
     .in-section-game::before {
         content: '';
-        width: 375px;
-        height: 509px;
-        left: 0px;
-        top: 127px;
+        width: 500px;
+        height: 700px;
+        left: 0;
+        top: 50px;
         background: linear-gradient(85.81deg, rgba(37, 203, 255, 0.5) 39.44%, rgba(76, 184, 244, 0.5) 89.61%);
         filter: blur(187px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
         z-index: 1;
     }
 
@@ -398,7 +398,7 @@
         filter: blur(5px);
         transform: rotate(330deg);
         background: url('../images/game-bg-sm.svg') no-repeat;
-        z-index: 21;
+        z-index: 1;
     }
 
     .game-bg-md {
@@ -417,14 +417,14 @@
 
     .in-section-education::before {
         content: '';
-        width: 375px;
-        height: 600px;
+        width: 500px;
+        height: 700px;
         left: 0px;
-        top: 127px;
-        background: linear-gradient(85.81deg, rgba(255, 37, 246, 0.7) 39.44%, rgba(76, 123, 244, 0.7) 89.61%, rgba(244, 76, 197, 0.7) 89.61%);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 50px;
+        border-radius: 500px;
+        background: linear-gradient(153deg, rgba(220, 101, 137, 0.30) 0%, rgba(201, 76, 244, 0.30) 100%);
+        filter: blur(300px);
         z-index: 1;
-        border-radius: 50%;
     }
 
     .resource-conus {
@@ -441,13 +441,12 @@
 
     .in-section-trading::before {
         content: '';
-        width: 375px;
-        height: 620px;
+        width: 5000px;
+        height: 700px;
         left: 0px;
-        top: 180px;
-        background: linear-gradient(85.81deg, rgba(37, 203, 255, 0.8) 39.44%, rgba(76, 123, 244, 0.8) 89.61%);
-        filter: blur(217px);
-        transform: matrix(-1, 0, 0, 1, 0, 0);
+        top: 50px;
+        background: linear-gradient(147deg, rgba(37, 203, 255, 0.30) 0%, rgba(76, 123, 244, 0.30) 100%);
+        filter: blur(300px);
         z-index: 1;
     }
 
@@ -511,14 +510,14 @@
     }
 
     .card-body {
-        padding: 15px;
+        padding: 20px 15px 10px;
     }
 
     .card-title {
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 600;
-        font-size: 16px;
+        font-size: 18px;
         line-height: 140%;
         color: #FFFFFF;
 
@@ -551,7 +550,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
-        font-size: 28px;
+        font-size: 36px;
         line-height: 120%;
         text-align: center;
         background: linear-gradient(90deg, rgba(50, 194, 255, 0.4) 0%, rgba(142, 122, 249, 0.4) 55.6%), #FFFFFF;
@@ -615,8 +614,8 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 15px;
-        line-height: 32px;
+        font-size: 18px;
+        line-height: 18px;
         color: #8A8A8E;
     }
 
